--- a/.ziplinee.yaml
+++ b/.ziplinee.yaml
@@ -2,9 +2,9 @@ builder:
   track: dev
 
 labels:
-  app-group: estafette-ci
+  app-group: ziplinee-ci
   type: library
-  team: estafette
+  team: ziplinee
   language: golang
 
 version:
@@ -26,14 +26,12 @@ stages:
     image: golang:1.17-alpine
     commands:
     - apk add git
-    - git tag v${ESTAFETTE_BUILD_VERSION}
-    - git push origin v${ESTAFETTE_BUILD_VERSION}
+    - git tag v${ZIPLINEE_BUILD_VERSION}
+    - git push origin v${ZIPLINEE_BUILD_VERSION}
 
   slack-notify:
     image: extensions/slack-build-status:dev
-    workspace: estafette
+    workspace: ziplinee
     channels:
     - '#build-status'
-    when:
-      status == 'succeeded' ||
-      status == 'failed'
+    when: status == 'succeeded' || status == 'failed'
